[package]
name    = "bdf2u8g2"
version = "0.1.0"
edition = "2021"

[dependencies]
bdf-parser = "0.1.0"
bitstream-io = "2.6.0"
clap = "4.5.29"
embedded-graphics = "0.8.1"
syn = { version = "2.0.98", features = [
    "full",
    "parsing",
    "visit",
    "extra-traits",
] }
u8g2-fonts = { version = "0.5.2", features = ["std"] }
zerocopy = { version = "0.8.17", features = ["derive", "std"] }
